--- a/harga barang/assets/_layouts/default.html
+++ b/harga barang/assets/_layouts/default.html
@@ -30,6 +30,10 @@
 		.menu-bawah td {
 			border: 0 !important;
 		}
+
+		[type="search"]::-webkit-search-cancel-button {
+			-webkit-appearance: searchfield-cancel-button;
+		}
 	</style>
 </head>
 <body>
