--- a/pembukuan/assets/_layouts/default.html
+++ b/pembukuan/assets/_layouts/default.html
@@ -4,10 +4,20 @@
 	<title>Pembukuan</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+	<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 	<style type="text/css">
 		body {
 			padding-top: 20px;
 			padding-bottom: 20px;
+		}
+
+		.navbar-fixed-bottom .table {
+			margin-bottom: 0;
+		}
+
+		.navbar-fixed-bottom .table,
+		.navbar-fixed-bottom td {
+			border: none !important;
 		}
 	</style>
 </head>
@@ -15,5 +25,17 @@
 	<div class="container">
 		{{ content }}
 	</div>
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/dexie/dexie.js"></script>
+	<script>
+		pembukuan = new Dexie('database pembukuan')
+		pembukuan.version(1).stores({
+			data: '++id, barang, jual, modal, untung, tanggal_lengkap, tanggal_bulan, tanggal_tahun'
+		})
+
+		$('.tambah').on('submit', function(x){
+			x.preventDefault()
+		})
+	</script>
 </body>
 </html>
