--- a/pembukuan/assets/_layouts/default.html
+++ b/pembukuan/assets/_layouts/default.html
@@ -8,7 +8,7 @@
 	<style type="text/css">
 		body {
 			padding-top: 20px;
-			padding-bottom: 20px;
+			padding-bottom: 50px;
 		}
 
 		.navbar-fixed-bottom .table {
@@ -32,6 +32,25 @@
 <body>
 	<div class="container">
 		{{ content }}
+	</div>
+	<div class="navbar navbar-default navbar-fixed-bottom">
+		<div class="container">
+			<table class="table table-bordered">
+				<tbody>
+					<tr>
+						<td>
+							<a href="index.html" class="btn btn-default">Beranda</a>
+						</td>
+						<td>
+							<a href="tambah.html" class="btn btn-default">Tambah</a>
+						</td>
+						<td>
+							<a href="semua.html" class="btn btn-default">Semua</a>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 	<script src="vendor/jquery/jquery.min.js"></script>
 	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
@@ -154,7 +173,7 @@
 				jual = Number($('.harga-jual').val()) * 1000
 				modal = Number($('.modal').val()) * 1000
 				untung = jual - modal
-				tanggal = new Date()
+				tanggal = new Date($('.tanggal').val())
 				hari = tanggal.getDate()
 				bulan = tanggal.getMonth() + 1
 				tahun = tanggal.getYear() + 1900
