--- a/blog/application/views/blog/beranda.twig
+++ b/blog/application/views/blog/beranda.twig
@@ -1,5 +1,9 @@
 {% extends 'layout/default.twig' %}
 
+{% block isi %}
+    
+{% endblock %}
+
 {% block bawah %}
     <div class="navbar navbar-default navbar-fixed-bottom">
     	<div class="container">
