--- a/blog/application/views/blog/tambah.twig
+++ b/blog/application/views/blog/tambah.twig
@@ -1,2 +1,46 @@
 {% extends 'layout/default.twig' %}
 
+{% block isi %}
+    <form action="" method="post" class="form">
+        <div class="form-group">
+            <label for="">Judul</label>
+            <input type="text" class="form-control" required="" name="judul">
+        </div>
+        <div class="form-group">
+            <label for="">Isi</label>
+            <textarea name="isi" id="" cols="30" rows="10" class="form-control" required=""></textarea>
+        </div>
+        <input type="submit" class="submit sembunyi" value="submit">
+    </form>
+{% endblock %}
+
+{% block bawah %}
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <div class="navbar-header">
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <td><a href="#!" class="btn btn-success oke">Oke</a></td>
+                            <td><a href="#!" class="btn btn-danger reset">Reset</a></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block skrip %}
+    <script>
+        $('.oke').click(function(){
+            $('.submit').click()
+        });
+
+        $('.reset').click(function(){
+            $('.form-control').each(function(){
+                $(this).val('')
+            })
+        });
+    </script>
+{% endblock %}
