--- a/blog/application/views/layout/default.twig
+++ b/blog/application/views/layout/default.twig
@@ -17,6 +17,10 @@
 		.navbar-fixed-bottom .btn {
 			width: 100%;
 		}
+
+		.sembunyi {
+			display: none;
+		}
 	</style>
 	{% block head %}{% endblock %}
 </head>
@@ -32,5 +36,7 @@
 		{% block isi %}{% endblock %}
 	</div>
 	{% block bawah %}{% endblock %}
+	<script src="{{ site_url() }}aset/vendor/jquery/jquery.min.js"></script>
+	{% block skrip %}{% endblock %}
 </body>
 </html>
