--- a/blog/application/views/blog/tambah.twig
+++ b/blog/application/views/blog/tambah.twig
@@ -4,11 +4,11 @@
     <form action="" method="post" class="form">
         <div class="form-group">
             <label for="">Judul</label>
-            <input type="text" class="form-control" required="" name="judul">
+            <input type="text" class="form-control" required="" name="judul" value="{{ data.judul }}">
         </div>
         <div class="form-group">
             <label for="">Isi</label>
-            <textarea name="isi" id="" cols="30" rows="10" class="form-control" required=""></textarea>
+            <textarea name="isi" id="" cols="30" rows="10" class="form-control" required="">{{ data.isi }}</textarea>
         </div>
         <input type="submit" class="submit sembunyi" value="submit">
     </form>
@@ -22,7 +22,6 @@
                     <tbody>
                         <tr>
                             <td><a href="#!" class="btn btn-success oke">Oke</a></td>
-                            <td><a href="#!" class="btn btn-danger reset">Reset</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -35,12 +34,6 @@
     <script>
         $('.oke').click(function(){
             $('.submit').click()
-        });
-
-        $('.reset').click(function(){
-            $('.form-control').each(function(){
-                $(this).val('')
-            })
         });
     </script>
 {% endblock %}
