--- a/blog/application/views/blog/tampil.twig
+++ b/blog/application/views/blog/tampil.twig
@@ -2,7 +2,7 @@
 
 {% block isi %}
     <h3>{{ data.judul }}</h3>
-    <p>{{ data.isi }}</p>
+    <p class="isi">{{ data.isi }}</p>
     <p>{{ data.tanggal }}</p>
 {% endblock %}
 
@@ -14,8 +14,8 @@
     				<tbody>
     					<tr>
                             <td><a href="{{ site_url() }}tambah" class="btn btn-default">Tambah</a></td>
-    						<td><a href="{{ site_url() }}" class="btn btn-warning">Edit</a></td>
-                            <td><a href="{{ site_url() }}" class="btn btn-danger">Hapus</a></td>
+    						<td><a href="{{ site_url() }}edit/{{ data.id }}" class="btn btn-warning">Edit</a></td>
+                            <td><a href="#!" class="btn btn-danger hapus">Hapus</a></td>
     					</tr>
     				</tbody>
     			</table>
@@ -33,5 +33,20 @@
         h3 {
             margin-top: 0;
         }
+
+        .isi {
+            white-space: pre-wrap;
+        }
     </style>
+{% endblock %}
+
+{% block skrip %}
+    <script>
+        $('.hapus').click(function(){
+            hapus = confirm('Hapus kah?')
+            if (hapus){
+                location.href = '{{ site_url() }}hapus/{{ data.id }}'
+            }
+        });
+    </script>
 {% endblock %}
