--- a/blog/application/views/blog/beranda.twig
+++ b/blog/application/views/blog/beranda.twig
@@ -3,7 +3,7 @@
 {% block isi %}
     <div class="list-group">
     	{% for x in data %}
-    	    <a href="{{ site_url() }}{{ x.id }}" class="list-group-item">{{ x.judul }}</a>
+    	    <a href="{{ site_url() }}{{ x.id }}" class="list-group-item hasil-pencarian-item">{{ x.judul }}</a>
     	{% endfor %}
     </div>
 {% endblock %}
@@ -15,6 +15,12 @@
     			<table class="table table-bordered">
     				<tbody>
     					<tr>
+    						<td>
+								<div class="input-group">
+									<input type="text" class="form-control cari">
+									<div class="input-group-addon hapus">x</div>
+								</div>
+							</td>
     						<td><a href="{{ site_url() }}tambah" class="btn btn-default">Tambah</a></td>
     					</tr>
     				</tbody>
@@ -29,5 +35,33 @@
 		body {
 			padding-bottom: 50px;
 		}
+
+        .hapus {
+            cursor: pointer;
+        }
     </style>
+{% endblock %}
+
+{% block skrip %}
+    <script type="text/javascript">
+        $('.cari').on('keyup', function(){
+            if ($('.cari').val() != ''){
+                $('.hasil-pencarian-item').addClass('sembunyi')
+                $('.hasil-pencarian-item').each(function(){
+                    if ($(this).is(":contains(" + $('.cari').val() + ")")) {
+                        $(this).removeClass('sembunyi')
+                    }
+                })
+            } else {
+                $('.hasil-pencarian-item').removeClass('sembunyi')
+            }
+        })
+
+        $('.hapus').each(function(){
+            $(this).click(function(){
+                $(this).parent().find('.form-control').val('')
+                $('.hasil-pencarian-item').removeClass('sembunyi')
+            })
+        })
+    </script>
 {% endblock %}
