--- a/blog/application/views/blog/tambah.twig
+++ b/blog/application/views/blog/tambah.twig
@@ -8,7 +8,7 @@
         </div>
         <div class="form-group">
             <label for="">Isi</label>
-            <textarea name="isi" id="" cols="30" rows="10" class="form-control" required="">{{ data.isi }}</textarea>
+            <textarea name="isi" id="" cols="30" rows="10" class="form-control">{{ data.isi }}</textarea>
         </div>
         <input type="submit" class="submit sembunyi" value="submit">
     </form>
